이제는 잘 쓰이지 않는 옵션 제거